Fixed the weird background overflow weirdness
overflow hidden made the background image act up, and I made it go into the corner, as intended. Was an experience or 2

--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,8 @@
 
 @theme {
 	/* Typography */
-	--font-sans: 'Poppins', sans-serif, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
+	--font-sans:
+		'Poppins', sans-serif, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
 		'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	--font-grotesk: 'Space Grotesk Variable', sans-serif;
 
@@ -109,7 +110,7 @@
 
 		/* Improved focus states */
 		&:focus-visible {
-			@apply outline outline-2 outline-offset-2;
+			@apply outline outline-offset-2;
 		}
 
 		/* Hover animation */
